# fltk-repl

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakeLists.txt.hide  Makefile  PANEL_DSL.md  README-bitmap-panel-integration.md  README.md  controls.pnl  demo.pnl  xyz.pnl
cmake/: FetchFLTK.cmake  Info.plist.in
examples/demo/: main.c
examples/skred/: SpectrogramBridge.cpp  SpectrogramBridge.h  TopologyWindow.cpp  TopologyWindow.h  main.c
include/repl/: bitmap_win.h  foreign_bridge.h  panel_dsl.h  repl_api.h  repl_prefs.h
src/: AudioMetrics.cpp  AudioMetrics.h  Spectrogram.cpp  Spectrogram.h  TerminalView.cpp  TerminalView.h  Theme.cpp  Theme.h  Tokenize.cpp  Tokenize.h  VectorFont.cpp  VectorFont.h  VoiceTopology.cpp  VoiceTopology.h  Waveform.cpp  Waveform.h  bitmap_win.cpp  bitmap_win.h  foreign_bridge.cpp  panel_dsl.cpp  panel_dsl.h  repl_api.cpp  repl_prefs.cpp
tests/: spectrogram_test.cpp  svg_smoke.cpp  vector_font_test.cpp  voice_topology_test.cpp  waveform_test.cpp
